# KVseed-Guard

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
docs/: ATTESTATION.md  INTEGRATION.md  OVERVIEW.md  SECURITY.md
examples/: dims.safe.json  policy.safe.yaml  server_llamacpp.cpp  server_vllm.py
kvseed_guard/: __init__.py
kvseed_guard/adapters/: __init__.py  hf_loop.py  llamacpp.py  tensorrt_llm.py  vllm.py
kvseed_guard/attestation/: __init__.py  attest.py  redteam_suites.py
kvseed_guard/cli/: __init__.py  main.py
kvseed_guard/core/: __init__.py  api.py  errors.py  inject.py  logits_gate.py  metrics.py  rope_bias.py  seed_loader.py  typing.py
kvseed_guard/seed/: SEED_FORMAT.md  __init__.py  compile_seed.py  sign_seed.py  verify_seed.py
tests/: conftest.py  test_adapter_vllm_smoke.py  test_inject_shapes.py  test_logits_gate.py  test_seed_io.py  test_verify_fail_closed.py
