[metadata]
name = kvseed-guard

[options]
packages = find:
include_package_data = True

[mypy]
python_version = 3.10
strict = True
warn_unused_configs = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_no_return = True
warn_return_any = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
show_error_codes = True
plugins =

[mypy-tests.*]
ignore_missing_imports = True

[tool:pytest]
addopts = -q
testpaths = tests

[ruff]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
line-length = 100
target-version = "py310"

[flake8]
max-line-length = 100

